# cashbot

./: .env  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake.yml  googletest-checker.yml
App/: main.cpp
DoxyDoc/html/: _auth_8hpp_source.html  _bot___exceptions_8hpp_source.html  _categories_8hpp_source.html  _env___keeper_8hpp_source.html  _expense_8hpp_source.html  _flow___bot_8hpp_source.html  _handlers_8hpp_source.html  _helper_8hpp_source.html  annotated.html  class_categories-members.html  class_categories.html  class_env_keeper-members.html  class_env_keeper.html  class_expense-members.html  class_expense.html  class_flow_bot-members.html  class_flow_bot.html  class_wrong_msg_exception-members.html  class_wrong_msg_exception.html  classbot_d_b-members.html  classbot_d_b.html  db_8hpp_source.html  db__structure_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  emoji_8hpp_source.html  graph_legend.html  menudata.js  namespace_helper.html  namespacemembers.html  struct_d_b_1_1_budget-members.html  struct_d_b_1_1_budget.html  struct_d_b_1_1_category-members.html  struct_d_b_1_1_category.html  struct_d_b_1_1_d_b_expense-members.html  struct_d_b_1_1_d_b_expense.html  struct_message-members.html  struct_message.html
DoxyDoc/html/d1/d7e/: class_env_keeper-members.html
DoxyDoc/html/d1/df4/: class_categories.html
DoxyDoc/html/d2/da9/: class_wrong_msg_exception.html
DoxyDoc/html/d3/dae/: _categories_8hpp_source.html
DoxyDoc/html/d3/db1/: _env___keeper_8hpp_source.html
DoxyDoc/html/d5/d19/: class_expense.html
DoxyDoc/html/d8/d6c/: _auth_8hpp_source.html
DoxyDoc/html/da/d63/: _helper_8hpp_source.html
DoxyDoc/html/search/: all_1.js  all_10.js  all_2.js  all_4.js  all_f.js  classes_1.js  classes_3.js  classes_4.js  functions_0.js  functions_8.js  variables_5.js  variables_6.js
db/: cashbot.db
doc/: Readme.md
docs/: classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  hierarchy.html  namespacemembers_func.html  namespaces.html
docs/d0/d28/: class_flow_bot-members.html
docs/d0/da1/: class_wrong_msg_exception-members.html
docs/d0/df6/: struct_d_b_1_1_d_b_expense-members.html
docs/d2/dd5/: _expense_8hpp_source.html
docs/d3/dad/: class_expense-members.html
docs/d4/d7a/: struct_d_b_1_1_budget-members.html
docs/d6/dad/: class_flow_bot.html
docs/dc/dee/: _bot___exceptions_8hpp_source.html
docs/de/d30/: struct_d_b_1_1_category-members.html
docs/df/d36/: struct_d_b_1_1_d_b_expense.html
docs/df/dc8/: class_env_keeper.html
docs/html/: functions_vars.html  index.html  namespacemembers_vars.html
docs/html/d4/daa/: struct_message.html
docs/html/d4/df5/: db__structure_8hpp_source.html
docs/html/d6/d73/: classbot_d_b.html
docs/html/d6/ddb/: classbot_d_b-members.html
docs/html/d7/d34/: class_categories-members.html
docs/html/d9/d33/: db_8hpp_source.html
docs/html/d9/dda/: _handlers_8hpp_source.html
docs/html/d9/de1/: namespace_helper.html
docs/html/da/d33/: struct_d_b_1_1_category.html
docs/html/db/d77/: struct_message-members.html
docs/html/dc/dac/: emoji_8hpp_source.html
docs/html/dc/db8/: struct_d_b_1_1_budget.html
docs/html/df/dec/: _flow___bot_8hpp_source.html
docs/html/search/: all_5.js  all_7.js  all_9.js  classes_2.js  classes_6.js  functions_3.js  functions_9.js  functions_a.js  variables_1.js  variables_2.js  variables_4.js  variables_7.js
docs/search/: all_0.js  all_3.js  all_6.js  all_8.js  all_a.js  classes_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_7.js  namespaces_0.js  searchdata.js  variables_3.js
include/: Auth.hpp  Bot_Exceptions.hpp  Categories.hpp  Env_Keeper.hpp  Expense.hpp  Flow_Bot.hpp  Handlers.hpp  Helper.hpp  db.hpp  db_structure.hpp  emoji.hpp  load_api_keys.hpp
src/: Auth.cpp  Auth.hpp  Bot_Exceptions.cpp  Categories.cpp  Env_Keeper.cpp  Expense.cpp  Flow_Bot.cpp  Handlers.cpp  Helper.cpp  db.cpp  db.hpp  load_api_keys.cpp  main.cpp
tests/: CMakeLists.txt  db_test.cpp
tests/db/: cashbot_test.db
tools/: createdb.sql
